test/tests/compiler/18_structures/invalid_parse/struct_member_storage_class.plx
type struc y (
    // structure member cannot have storage class
    data a: i32
)
